--- a/index.html
+++ b/index.html
@@ -20,36 +20,45 @@
                     <div class="logo row"><h1><a href="index.html">Logo</a></h1></div>
                     <div class="navlink row">
                         <ul class="fxJcSE fxAiC">
-                            <li class="none">
+                            <li class="none list active">
                                 <a href="index.html">
-                                    <div><i class="fas fa-home"></i></div>
+                                    <span class="icon"><i class="fas fa-home"></i></span>
                                     <p>首頁</p>
                                 </a>
                             </li>
-                            <li>
+                            <li class="list">
                                 <a href="#">
-                                    <i class="fas fa-tags"></i>
+                                    <span class="icon">
+                                        <i class="fas fa-tags"></i>
+                                    </span>
                                     <p>優惠活動</p>
                                 </a>
                             </li>
-                            <li class="none">
+                            <li class="none list">
                                 <a href="#">
-                                    <i class="fas fa-registered"></i>
+                                    <span class="icon">
+                                        <i class="fas fa-registered"></i>
+                                    </span>
                                     <p>免費註冊</p>
                                 </a>
                             </li>
-                            <li>
+                            <li class="list">
                                 <a href="#">
-                                    <i class="fas fa-user-clock"></i>
+                                    <span class="icon">
+                                        <i class="fas fa-user-clock"></i>
+                                    </span>
                                     <p>線上客服</p>
                                 </a>
                             </li>
-                            <li>
+                            <li class="search">
                                 <a href="#">
-                                    <i class="fas fa-search"></i>
+                                    <span>
+                                        <i class="fas fa-search"></i>
+                                    </span>
                                     <p>查詢按鈕</p>
                                 </a>
                             </li>
+                            <div class="indicator"></div>
                         </ul>
                     </div>
                 </div>
